--- a/URLShortener/Properties/launchSettings.json
+++ b/URLShortener/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5025",
+      "applicationUrl": "http://*:5025",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7193;http://localhost:5025",
+      "applicationUrl": "https://192.168.1.200:7193",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
